--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "async": "^2.6.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
