--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.4",
-    "@angular/cdk": "2.0.0-beta.11",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/cli": "1.4.4",
-    "@angular/common": "^4.0.0",
+    "@angular/common": "^4.4.3",
     "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/core": "^4.4.3",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
-    "@angular/material": "2.0.0-beta.11",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
