--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.4",
+    "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/cli": "1.4.4",
     "@angular/common": "^4.4.3",
@@ -29,6 +29,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "primeng": "^5.2.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.14"
   },
