--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/cli": "1.4.4",
     "@angular/common": "^4.4.3",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.4.3",
@@ -34,7 +33,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.4",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
