--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "ng2-opd-popup": "^1.1.21",
     "primeng": "^5.2.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.14"
