--- a/client/src/tsconfig.app.json
+++ b/client/src/tsconfig.app.json
@@ -3,6 +3,11 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
+    "paths": {
+      "@angular/*": [
+        "../node_modules/@angular/*"
+      ]
+    },
     "module": "es2015",
     "types": []
   },
