--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "file-saver": "^1.3.8",
     "ng2-opd-popup": "^1.1.21",
     "primeng": "^5.2.3",
     "rxjs": "^5.1.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/file-saver": "^1.3.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
